--- a/assignment2/page15.html
+++ b/assignment2/page15.html
@@ -1,1 +1,31 @@
 
+<!doctype html>
+<html lang="eng">
+    <head>
+
+        <meta charset="utf-8" />
+        <title>Doors</title>
+        <style>
+            h1 {
+                color: white;
+                font-weight: bold;
+                font-size: 60px;
+                font-style:oblique;
+            }
+
+            body {
+                background-color: black;
+            }
+            
+        </style>
+
+    </head>
+    
+<body>
+
+<h1>When Stanley reach the top the reality of the <a href = "page18.html"situation></a> he was in was finally revealed&period;  </h1>
+
+
+</body>
+    </html>
+
