--- a/assignment2/page16.html
+++ b/assignment2/page16.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>Farewell</title>
         <style>
             h1 {
                 color: aqua;
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>Goodbye Stanley cryied the narrator while he allowed Stanley to die </h1>
+<h1>Goodbye Stanley cried the narrator while he allowed Stanley to die </h1>
 <h2>Honestly he takes you for granted does he not&quest;</h2>
 
 </body>
