--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -3,7 +3,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Assignment 2</title>
+        <title>The Stanley Parable</title>
         <style>
             h1 {
                 color: white;
