--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -11,7 +11,9 @@
                 font-size: 60px;
                 font-style:oblique;
             }
-
+            a {
+                color: white;
+            }
             body {
                 background-color: black;
             }
@@ -22,7 +24,7 @@
     
 <body>
 
-<h1>This is the story of a man named Stanley. He got up from his desk and stepped out of his <a href = "page02.html"> office></a> </h1>
+<h1>This is the story of a man named Stanley. He got up from his desk and stepped out of his <a href = "page02.html"> office</a> </h1>
 
 
 </body>
