--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -12,7 +12,7 @@
                 font-style:oblique;
             }
             a {
-                color: white;
+                color: red;
             }
             body {
                 background-color: black;
