--- a/assignment2/page03.html
+++ b/assignment2/page03.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>Feeling a wave of <a href = "page08.html" disbelief></a> Stanley went up hoping he might find <a href = "page05.html"answers></a> </h1>
+<h1>Feeling a wave of <a href = "page08.html">disbelief</a> Stanley went up hoping he might find <a href = "page05.html">answers</a> </h1>
 
 
 </body>
