--- a/assignment2/page04.html
+++ b/assignment2/page04.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1> Wrong door <a href = "page06.html"Stanley></a> but if you <a href = "page07.html"go></a> <a href = "page03.html"left></a> you will be back on track </h1>
+<h1> Wrong door <a href = "page06.html">Stanley</a> but if you <a href = "page07.html">go</a> <a href = "page03.html">left</a> you will be back on track </h1>
 
 
 </body>
