--- a/assignment2/page05.html
+++ b/assignment2/page05.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>After entering the office Stanley entered the secret code and began his <a href = "page09.html" descent></a> </h1>
+<h1>After entering the office Stanley entered the secret code and began his <a href = "page09.html"> descent</a> </h1>
 
 
 </body>
