--- a/assignment2/page06.html
+++ b/assignment2/page06.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>Stanley how did we&minus; This is all your fault Stanley&period; <a href = "index.html"Restart></a> </h1>
+<h1>Stanley how did we&minus; This is all your fault Stanley&period; <a href = "index.html">Restart</a> </h1>
 
 
 </body>
