--- a/assignment2/page07.html
+++ b/assignment2/page07.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>Stanley&quest; Do you <a href = "page10.html" hate></a> my game so much you do not even consider to <a href = "page11.html"listen></a> to me&quest; </h1>
+<h1>Stanley&quest; Do you <a href = "page10.html" >hate</a> my game so much you do not even consider to <a href = "page11.html">listen</a> to me&quest; </h1>
 
 
 </body>
