--- a/assignment2/page08.html
+++ b/assignment2/page08.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>THE END IS NEVER THE END IS NEVER THE <a href = "index.html"END></a> IS NEVER THE END IS NEVER THE END IS NEVER THE END IS NEVER THE END </h1>
+<h1>THE END IS NEVER THE END IS NEVER THE <a href = "index.html">END</a> IS NEVER THE END IS NEVER THE END IS NEVER THE END IS NEVER THE END </h1>
 
 
 </body>
