--- a/assignment2/page10.html
+++ b/assignment2/page10.html
@@ -24,7 +24,7 @@
     
 <body>
 
-<h1> Wow you are very powerful <a href = "index.html"Stanley></a> </h1>
+<h1> Wow you are very powerful <a href = "index.html">Stanley</a> </h1>
 
 
 </body>
