--- a/assignment2/page11.html
+++ b/assignment2/page11.html
@@ -25,7 +25,7 @@
 <body>
 
 <h1>You do&quest; Then why are you still here leave if that is what you want Stanley </h1>
-<h2>I tried Stanley but that is it im out <a href = "index.html"thank you for playing></a></h2>
+<h2>I tried Stanley but that is it im out im out<a href = "index.html">thank you for playing</a></h2>
 
 </body>
     </html>
