--- a/assignment2/page12.html
+++ b/assignment2/page12.html
@@ -25,6 +25,6 @@
 
 <h1>As Stanley entered the facility&comma; suddenly cameras began to come alive</h1>
 <h2>Revealing that everyone had been mind controlled this whole time&quest;</h2>
-<h3>No&commat; Stanley cried as he began to realize what was going on he <a href = "page15.html"ascended></a> up the space</h3>
+<h3>No&commat; Stanley cried as he began to realize what was going on he <a href = "page15.html">ascended</a> up the space</h3>
 </body>
     </html>
