--- a/assignment2/page14.html
+++ b/assignment2/page14.html
@@ -24,7 +24,7 @@
 <body>
 
 <h1>Well Stanley you chose this&period; </h1>
-<h2>Goodbye <a href = "page16.html"Stanley></a></h2>
+<h2>Goodbye <a href = "page16.html">Stanley</a></h2>
 
 </body>
     </html>
