--- a/assignment2/page15.html
+++ b/assignment2/page15.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>When Stanley reach the top the reality of the <a href = "page18.html"situation></a> he was in was finally revealed&period;  </h1>
+<h1>When Stanley reach the top the reality of the <a href = "page18.html">situation</a> he was in was finally revealed&period;  </h1>
 
 
 </body>
