--- a/assignment2/page02.html
+++ b/assignment2/page02.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>When Stanley came to a set of two doors he went to the <a href = "page04.html" door></a> on his <a href = "page03.html"left.></a>  </h1>
+<h1>When Stanley came to a set of two doors he went to the <a href = "page04.html"> door</a> on his <a href = "page03.html">left</a></h1>
 
 
 </body>
