--- a/assignment2/page09.html
+++ b/assignment2/page09.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>In front of him was an escape sign&comma; which would lead to his <a href = "page13.html"death></a>&comma; as well as the <a href = "page12.html"MIND CONTROL FACILITY></a>  </h1>
+<h1>In front of him was an escape sign&comma; which would lead to his <a href = "page13.html">death</a>&comma; as well as the <a href = "page12.html">MIND CONTROL FACILITY</a>  </h1>
 
 
 </body>
