--- a/assignment2/page13.html
+++ b/assignment2/page13.html
@@ -23,7 +23,7 @@
     
 <body>
 
-<h1>Stanley&quest; You can still go <a href = "page09.html"back></a> you are actively choosing <a href = "page14.html"death></a> here </h1>
+<h1>Stanley&quest; You can still go <a href = "page09.html">back</a> you are actively choosing <a href = "page14.html">death</a> here </h1>
 
 
 </body>
