--- a/assignment2/page06.html
+++ b/assignment2/page06.html
@@ -12,7 +12,10 @@
                 font-size: 60px;
                 font-style:oblique;
             }
-
+            a {
+                color: red;
+                text-decoration: none;
+            }
             body {
                 background-color: black;
             }
