--- a/assignment2/page08.html
+++ b/assignment2/page08.html
@@ -12,7 +12,9 @@
                 font-size: 60px;
                 font-style:oblique;
             }
-
+            a {
+                color: red;
+            }
             body {
                 background-color: white;
             }
