--- a/assignment2/page11.html
+++ b/assignment2/page11.html
@@ -13,7 +13,9 @@
                 font-size: 60px;
                 font-style:oblique;
             }
-
+            a {
+                color: red;
+            }
             body {
                 background-color: black;
             }
