--- a/assignment2/page11.html
+++ b/assignment2/page11.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>Leave</title>
         <style>
             h1 {
                 color: white;
