--- a/assignment2/page16.html
+++ b/assignment2/page16.html
@@ -24,7 +24,7 @@
 <body>
 
 <h1>Goodbye Stanley cried the narrator while he allowed Stanley to die </h1>
-<h2>Honestly he takes you for granted does he not&quest;</h2>
+<h2>Honestly he takes you for <a href = "page17.html">granted</a> does he not&quest;</h2>
 
 </body>
     </html>
