--- a/assignment2/page17.html
+++ b/assignment2/page17.html
@@ -4,10 +4,10 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>Leave</title>
         <style>
             h1 {
-                color: white;
+                color: aqua;
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
@@ -25,8 +25,8 @@
     
 <body>
 
-<h1>When Stanley reach the top the reality of the <a href = "page18.html">situation</a> he was in was finally revealed&period;  </h1>
-
+<h1> The narrator really does not realize how <a href = "index.html">special</a> you are </h1>
+<h2>But it matters not&period; Goodbye Stanley</h2>
 
 </body>
     </html>
