--- a/assignment2/page18.html
+++ b/assignment2/page18.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>The Button</title>
         <style>
             h1 {
                 color: white;
@@ -25,7 +25,7 @@
     
 <body>
 
-<h1>When Stanley reach the top the reality of the <a href = "page18.html">situation</a> he was in was finally revealed&period;  </h1>
+<h1>When Stanley saw the <a href = "page19.html">button</a> He turned <a href = "page20.html">off</a> the machine&period; </h1>
 
 
 </body>
