--- a/assignment2/page03.html
+++ b/assignment2/page03.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>left</title>
         <style>
             h1 {
                 color: white;
