--- a/assignment2/page07.html
+++ b/assignment2/page07.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>Ignore Him</title>
         <style>
             h1 {
                 color: white;
