--- a/assignment2/page19.html
+++ b/assignment2/page19.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Doors</title>
+        <title>Is Never The End</title>
         <style>
             h1 {
                 color: white;
@@ -25,8 +25,8 @@
     
 <body>
 
-<h1>When Stanley reach the top the reality of the <a href = "page18.html">situation</a> he was in was finally revealed&period;  </h1>
-
+<h1>Stanley&quest; Did you only want control&quest;  </h1>
+<h2>Well I am going to take it away from you first&period; Well Goodbye</h2>
 
 </body>
     </html>
