--- a/assignment2/page16.html
+++ b/assignment2/page16.html
@@ -12,7 +12,12 @@
                 font-size: 60px;
                 font-style:oblique;
             }
-
+            h2 {
+                color: aqua;
+                font-weight: bold;
+                font-size: 60px;
+                font-style:oblique;
+            }
             body {
                 background-color: black;
             }
