--- a/assignment2/page11.html
+++ b/assignment2/page11.html
@@ -13,6 +13,12 @@
                 font-size: 60px;
                 font-style:oblique;
             }
+            h2 {
+                color: white;
+                font-weight: bold;
+                font-size: 60px;
+                font-style:oblique;
+            }
             a {
                 color: red;
             }
