--- a/assignment2/page12.html
+++ b/assignment2/page12.html
@@ -12,6 +12,18 @@
                 font-size: 60px;
                 font-style:oblique;
             }
+            h2 {
+                color: white;
+                font-weight: bold;
+                font-size: 60px;
+                font-style:oblique;
+            }
+            h3 {
+                color: white;
+                font-weight: bold;
+                font-size: 60px;
+                font-style:oblique;
+            }
             a {
                 color: red;
             }
