--- a/assignment2/page17.html
+++ b/assignment2/page17.html
@@ -12,6 +12,12 @@
                 font-size: 60px;
                 font-style:oblique;
             }
+            h2 {
+                color: aqua;
+                font-weight: bold;
+                font-size: 60px;
+                font-style:oblique;
+            }
             a {
                 color: red;
             }
