changed first page

--- a/final/index.html
+++ b/final/index.html
@@ -6,16 +6,16 @@
         <title>The Stanley Parable</title>
         <style>
             h1 {
-                color: white;
+                color: rgb(249, 218, 16);
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
             }
             a {
-                color: red;
+                color: rgb(202, 165, 16);
             }
             body {
-                background-color: black;
+                background-color: rgb(168, 155, 155);
             }
             
         </style>
