--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,8 @@
                 color: rgb(202, 165, 16);
             }
             body {
-                background-color: rgb(195, 183, 183);
+                background-color: black;
+                background: url("assets/stanley01.png") no-repeat center/cover;
             }
             
         </style>
