--- a/final/index.html
+++ b/final/index.html
@@ -5,6 +5,10 @@
         <meta charset="utf-8" />
         <title>The Stanley Parable</title>
         <style>
+            html {
+                width: 100%;
+                height: 100%;
+            }
             h1 {
                 color: rgb(249, 218, 16);
                 font-weight: bold;
@@ -16,7 +20,8 @@
             }
             body {
                 background-color: black;
-                background: url("assets/stanley01.png") no-repeat center/cover;
+                background: url("assets/stanley03.jpg") no-repeat center/cover;
+                overflow: hidden;
             }
             
         </style>
