added all images corectly

--- a/final/index.html
+++ b/final/index.html
@@ -20,8 +20,8 @@
             }
             body {
                 background-color: black;
-                background: url("assets/stanley03.jpg") no-repeat center/cover;
-                overflow: hidden;
+                background: url("../assets/stanley01.png") no-repeat center/cover;
+                
             }
             
         </style>
