--- a/final/page08.html
+++ b/final/page08.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: white;
+                background: url("../assets/stanley08.jpg") no-repeat center/cover;
             }
             
         </style>
