--- a/final/page09.html
+++ b/final/page09.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley09.png") no-repeat center/cover;
             }
             
         </style>
