--- a/final/page13.html
+++ b/final/page13.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley13.jpg") no-repeat center/cover;
             }
             
         </style>
