--- a/final/page16.html
+++ b/final/page16.html
@@ -20,6 +20,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley16.jpg") no-repeat center/cover;
             }
             
         </style>
