--- a/final/page02.html
+++ b/final/page02.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley02.png") no-repeat center/cover;
             }
             
         </style>
