--- a/final/page04.html
+++ b/final/page04.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley04.jpg") no-repeat center/cover;
             }
             
         </style>
