--- a/final/page06.html
+++ b/final/page06.html
@@ -18,6 +18,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley06.jpg") no-repeat center/cover;
             }
             
         </style>
