--- a/final/page10.html
+++ b/final/page10.html
@@ -18,6 +18,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley10.jpg") no-repeat center/cover;
             }
             
         </style>
