--- a/final/page11.html
+++ b/final/page11.html
@@ -24,6 +24,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley11.jpg") no-repeat center/cover;
             }
             
         </style>
