--- a/final/page12.html
+++ b/final/page12.html
@@ -29,6 +29,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley12.png") no-repeat center/cover;
             }
             
         </style>
