--- a/final/page15.html
+++ b/final/page15.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley15.jpeg") no-repeat center/cover;
             }
             
         </style>
