--- a/final/page18.html
+++ b/final/page18.html
@@ -17,6 +17,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley18.jpg") no-repeat center/cover;
             }
             
         </style>
