--- a/final/page19.html
+++ b/final/page19.html
@@ -23,6 +23,7 @@
             }
             body {
                 background-color: black;
+                background: url("../assets/stanley19.jpg") no-repeat center/cover;
             }
             
         </style>
