--- a/final/page20.html
+++ b/final/page20.html
@@ -14,7 +14,8 @@
             }
 
             body {
-                background-color: red;
+                background-color: black;
+                background: url("../assets/stanley20.jpg") no-repeat center/cover;
             }
             
         </style>
