--- a/final/page10.html
+++ b/final/page10.html
@@ -7,6 +7,10 @@
         <meta charset="utf-8" />
         <title>Powerful</title>
         <style>
+            html {
+                width: 100%;
+                height: 100%;
+            }
             h1 {
                 color: white;
                 font-weight: bold;
