--- a/final/page14.html
+++ b/final/page14.html
@@ -6,6 +6,10 @@
         <meta charset="utf-8" />
         <title>Farwell</title>
         <style>
+            html {
+                width: 100%;
+                height: 100%;
+            }
             h1 {
                 color: white;
                 font-weight: bold;
