--- a/final/page18.html
+++ b/final/page18.html
@@ -6,6 +6,10 @@
         <meta charset="utf-8" />
         <title>The Button</title>
         <style>
+            html {
+                width: 100%;
+                height: 100%;
+            }
             h1 {
                 color: white;
                 font-weight: bold;
@@ -13,7 +17,7 @@
                 font-style:oblique;
             }
             a {
-                color: red;
+                color: blue;
             }
             body {
                 background-color: black;
