--- a/final/page20.html
+++ b/final/page20.html
@@ -6,6 +6,10 @@
         <meta charset="utf-8" />
         <title>The End</title>
         <style>
+            html {
+                width: 100%;
+                height: 100%;
+            }
             h1 {
                 color: green;
                 font-weight: bold;
