added new photo and changed colors

--- a/final/page12.html
+++ b/final/page12.html
@@ -33,7 +33,7 @@
             }
             body {
                 background-color: black;
-                background: url("../assets/stanley12.png") no-repeat center/cover;
+                background: url("../assets/stanley12.jpg") no-repeat center/cover;
             }
             
         </style>
