--- a/final/page05.html
+++ b/final/page05.html
@@ -11,7 +11,7 @@
                 height: 100%;
             }
             h1 {
-                color: white;
+                color: blue;
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
