another image/another color

--- a/final/page15.html
+++ b/final/page15.html
@@ -11,7 +11,7 @@
                 height: 100%;
             }
             h1 {
-                color: white;
+                color: blue;
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
@@ -21,7 +21,7 @@
             }
             body {
                 background-color: black;
-                background: url("../assets/stanley15.jpeg") no-repeat center/cover;
+                background: url("../assets/stanley15.jpg") no-repeat center/cover;
             }
             
         </style>
