--- a/final/page19.html
+++ b/final/page19.html
@@ -11,13 +11,13 @@
                 height: 100%;
             }
             h1 {
-                color: white;
+                color: blueviolet;
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
             }
             h2 {
-                color: white;
+                color: blueviolet;
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
