--- a/final/page15.html
+++ b/final/page15.html
@@ -11,7 +11,7 @@
                 height: 100%;
             }
             h1 {
-                color: blue;
+                color: rgb(11, 11, 206);
                 font-weight: bold;
                 font-size: 60px;
                 font-style:oblique;
